# newsstand-back

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  settings.ini
.github/workflows/: docker-publish.yml
core/: manager.py  models.py  schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
core/management/commands/: import_cbz.py
core/migrations/: 0001_initial.py  0002_alter_issue_unique_together_and_more.py  0002_alter_section_name_and_more.py  0003_alter_credit_options_alter_issue_options_and_more.py  0003_delete_issuecover.py  0004_issuesection_order.py  0004_magazine_issue_magazine_and_more.py  0005_alter_issue_magazine.py  0005_issuesection_title.py  0006_alter_magazine_country_alter_magazine_description_and_more.py  0006_alter_page_unique_together_and_more.py  0007_alter_issue_edition.py  0008_issuesection_text_content.py
newsstand_back/: asgi.py  settings.py  urls.py  wsgi.py
