[project]
name = "newsstand-back"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.16.9",
    "drf-spectacular>=0.29.0",
    "drf-nested-routers>=0.95.0",
    "Pillow>=12.1.1",
    "pydantic>=2.13.2",
    "python-decouple>=3.8",
]
